Add Owner's Photo

--- a/MyLeasing.Web/Views/Owners/Edit.cshtml
+++ b/MyLeasing.Web/Views/Owners/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyLeasing.Web.Data.Entities.Owner
+﻿@model MyLeasing.Web.Models.OwnerViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -9,10 +9,12 @@
 <h4>Owner</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
+    <div class="col-md-6">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="PhotoUrl" />
+
             <div class="form-group">
                 <label asp-for="Document" class="control-label"></label>
                 <input asp-for="Document" class="form-control" />
@@ -27,6 +29,11 @@
                 <label asp-for="LastName" class="control-label"></label>
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PhotoFile" class="control-label"></label>
+                <input asp-for="PhotoFile" class="form-control" type="file" />
+                <span asp-validation-for="PhotoFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FixedPhone" class="control-label"></label>
@@ -47,6 +54,13 @@
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
+    </div>
+
+    <div class="col-md-6">
+        @if (!string.IsNullOrEmpty(Model.PhotoUrl))
+        {
+            <img src="@Url.Content(Model.PhotoUrl)" alt="Photo" style="max-width:256px;max-height:256px;">
+        }
     </div>
 </div>
 
