--- a/MyLeasing.Web/Views/Owners/Create.cshtml
+++ b/MyLeasing.Web/Views/Owners/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyLeasing.Web.Data.Entities.Owner
+﻿@model MyLeasing.Web.Models.OwnerViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Document" class="control-label"></label>
@@ -26,6 +26,11 @@
                 <label asp-for="LastName" class="control-label"></label>
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PhotoFile" class="control-label"></label>
+                <input asp-for="PhotoFile" class="form-control" type="file" />
+                <span asp-validation-for="PhotoFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FixedPhone" class="control-label"></label>
