--- a/MyLeasing.Web/Views/Shared/_Layout.cshtml
+++ b/MyLeasing.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,24 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Lessees" asp-action="Index">Lessees</a>
                         </li>
                     </ul>
+
+                    <ul class="navbar-nav navbar-right">
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Index">@this.User.Identity.Name</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+                            </li>
+                        }
+                    </ul>
                 </div>
             </div>
         </nav>
