--- a/MyLeasing.Web/Views/Account/Login.cshtml
+++ b/MyLeasing.Web/Views/Account/Login.cshtml
@@ -39,7 +39,7 @@
             <!-- Submit __ Register -->
             <div class="form-group">
                 <input type="submit" value="Login" class="btn btn-success" />
-                <a asp-action="Register" asp-route-ReturnUrl="@Context.Request.Query["ReturnUrl"]" class="btn btn-primary">Register</a>
+                <a asp-action="Register" asp-route-ReturnUrl="@Context.Request.Query["ReturnUrl"]" class="btn btn-primary">Sign in</a>
             </div>
         </form>
     </div>
