--- a/MyLeasing.Web/Views/Lessees/Details.cshtml
+++ b/MyLeasing.Web/Views/Lessees/Details.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h2>Details</h2>
 
 <div>
     <partial name="_Display" />
 </div>
 
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning"><i class="fa fa-pen"></i> Edit</a>
+    <a asp-action="Index" class="btn btn-success">Back to List</a>
 </div>
