--- a/MyLeasing.Web/Views/Lessees/Index.cshtml
+++ b/MyLeasing.Web/Views/Lessees/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">New Lessee</a>
 </p>
 <table class="table">
     <thead>
@@ -20,6 +20,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.LastName)
+            </th>
+            <th>
+                Photo
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.FixedPhone)
@@ -46,6 +49,9 @@
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
+                <img src="@Html.DisplayFor(modelItem => item.PhotoFullPath)" alt="Pic" style="max-width:32px;max-height:32px;">
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.FixedPhone)
             </td>
             <td>
@@ -55,9 +61,9 @@
                 @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info">Details</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Edit</a>
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
             </td>
         </tr>
 }
