--- a/MyLeasing.Web/Views/Owners/Create.cshtml
+++ b/MyLeasing.Web/Views/Owners/Create.cshtml
@@ -4,8 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
+<h2>Create</h2>
 <h4>Owner</h4>
 <hr />
 <div class="row">
@@ -16,7 +15,7 @@
             <partial name="_Input" />
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <button type="submit" class="btn btn-primary"><i class="fa fa-plus-square"></i> Create</button>
             </div>
         </form>
     </div>
