--- a/MyLeasing.Web/Views/Owners/Index.cshtml
+++ b/MyLeasing.Web/Views/Owners/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<MyLeasing.Web.Data.Entities.Owner>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Owners";
 }
 
-<h1>Index</h1>
+<h1>Owners</h1>
 
 <p>
     <a asp-action="Create">New Owner</a>
