--- a/MyLeasing.Web/Views/Shared/_Layout.cshtml
+++ b/MyLeasing.Web/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Sign in</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Sign up</a>
                             </li>
                         }
                     </ul>
